--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Hello, I'm KWIN 👋</h1>
-        <p>I am passionate about technology and problem-solving. Here's a glimpse of my work:</p>
+        <h1>KWIN CITY</h1>
+        <p>Redefining the business landscape with Knowledge, Wellbeing and INnovation</p>
     </header>
 
     <section>
