--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     </header>
 
     <section>
-        <h2>🛠️ Projects</h2>
+        <h2>Journey On with Conviction</h2>
         <ul>
-            <li><strong>Project 1</strong>: A short description of your project1.</li>
-            <li><strong>Project 2</strong>: A short description of another project2.</li>
+            <li>Our new city is designed for ‘that’ tomorrow. KWIN has people at its heart. Here, each doorway opens to new learning opportunities, every pillar supports cutting-edge innovations, and every path charts the course for comprehensive well-being.
+Our city, rich in green promises, is for and of the people. Built on a mindful social framework, KWIN instils values of collaboration, conservation and coexistence.
+A destination like no other, the city inspires an innovative way of life..</li>
         </ul>
 
         <h2>🚀 Skills</h2>
