--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <h2>Journey On with Conviction</h2>
         <ul>
             <li>Our new city is designed for ‘that’ tomorrow. KWIN has people at its heart. Here, each doorway opens to new learning opportunities, every pillar supports cutting-edge innovations, and every path charts the course for comprehensive well-being.
-Our city, rich in green promises, is for and of the people. Built on a mindful social framework, KWIN instils values of collaboration, conservation and coexistence.
-A destination like no other, the city inspires an innovative way of life..</li>
+
+                Our city, rich in green promises, is for and of the people. Built on a mindful social framework, KWIN instils values of collaboration, conservation and coexistence.
+
+                A destination like no other, the city inspires an innovative way of life..</li>
         </ul>
 
-        <h2>🚀 Skills</h2>
+        <h2>Strategic Location</h2>
         <ul>
-            <li>C++, Python, JavaScript</li>
-            <li>Data Structures and Algorithms</li>
-            <li>Web Development (React.js, Node.js)</li>
+            <li>It is strategically located between Doddaballapur and Dobbaspet, at 45 minutes from Kempegowda International Airport and is well-connected through the Bangalore-Hubli-Mumbai Express rail route, near National Highways 44 and 648.</li>
         </ul>
 
         <h2>🌐 Find Me Online</h2>
