--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
     <section>
         <h2>Journey On with Conviction</h2>
         <ul>
-            <li>Our new city is designed for ‘that’ tomorrow. KWIN has people at its heart. Here, each doorway opens to new learning opportunities, every pillar supports cutting-edge innovations, and every path charts the course for comprehensive well-being.
-
-                Our city, rich in green promises, is for and of the people. Built on a mindful social framework, KWIN instils values of collaboration, conservation and coexistence.
-
-                A destination like no other, the city inspires an innovative way of life..</li>
+            <li>Our new city is designed for ‘that’ tomorrow. KWIN has people at its heart. Here, each doorway opens to new learning opportunities, every pillar supports cutting-edge innovations, and every path charts the course for comprehensive well-being.</li>
+            <li> Our city, rich in green promises, is for and of the people. Built on a mindful social framework, KWIN instils values of collaboration, conservation and coexistence.</li>
+            <li>A destination like no other, the city inspires an innovative way of life..</li>
         </ul>
 
         <h2>Strategic Location</h2>
