--- a/index.html
+++ b/index.html
@@ -26,37 +26,39 @@
             <li>It is strategically located between Doddaballapur and Dobbaspet, at 45 minutes from Kempegowda International Airport and is well-connected through the Bangalore-Hubli-Mumbai Express rail route, near National Highways 44 and 648.</li>
         </ul>
 
-        <h2>🌐 Find Me Online</h2>
-        <ul>
-            <li><a href="https://github.com/your-github-username" target="_blank">GitHub</a></li>
-            <li><a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></li>
-        </ul>
-
-        <h2>Portfolio Topic</h2>
+        <h2> SMART CITY </h2>
         <dl>
             <dt>Course Name</dt>
-            <dd>Algorithmic Problem Solving</dd>
+            <dd>Design and Analysis of Alogorithms</dd>
 
             <dt>Course Code</dt>
-            <dd>Course Code Placeholder</dd>
+            <dd>24ECAC203</dd>
 
-            <dt>Name</dt>
-            <dd>Your Name</dd>
+            <dt>Task Force</dt>
+            <dd>130. Vishal U Hosur</dd>
+            <dd>131. Varun S Terdal</dd>
+            <dd>133. Suleman A </dd>
+            <dd>158. Saif Ali</dd>
+
 
             <dt>SRN</dt>
-            <dd>Your SRN</dd>
+            <dd> 01fe23bci065 </dd>
+            <dd> 01fe23bci068 </dd>
+            <dd> 01fe23bci071 </dd>
+            <dd> 01fe23bci0 </dd>
+
 
             <dt>Course Instructor</dt>
-            <dd>Instructor Name Placeholder</dd>
+            <dd>KMMR</dd>
 
             <dt>University</dt>
-            <dd>Your University Name</dd>
+            <dd>KLE Technological Univercity</dd>
 
             <dt>Portfolio Topic/Domain</dt>
-            <dd>Google</dd>
+            <dd>Smart City</dd>
         </dl>
 
-        <blockquote>“The only way to do great work is to love what you do.” – Steve Jobs</blockquote>
+        <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller</blockquote>
     </section>
 </body>
 </html>
