--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>KWIN CITY</h1>
         <p>Redefining the business landscape with Knowledge, Wellbeing and INnovation</p>
+        <a href="https://i.ibb.co/KxGFzD1/projdaa.png">
     </header>
 
     <section>
