--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <dd>KMMR</dd>
 
             <dt>University</dt>
-            <dd>KLE Technological Univercity</dd>
+            <dd>KLE Technological University</dd>
 
             <dt>Portfolio Topic/Domain</dt>
             <dd>Smart City</dd>
