--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <header>
         <h1>KWIN CITY</h1>
         <p>Redefining the business landscape with Knowledge, Wellbeing and INnovation</p>
-       
     </header>
-
+     <header>
+         <img src = "https://ibb.co/pjPJrQm" 
+             alt = "KWIN CITY">
+     </header>
     <section>
         <h2>Journey On with Conviction</h2>
         <ul>
