--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <h1>KWIN CITY</h1>
         <p>Redefining the business landscape with Knowledge, Wellbeing and INnovation</p>
     </header>
-    
+    <section class="content-section">
+        <h2>KWIN City</h2>  <img src="projdaa.jpg" alt="KWIN City">
     <section>
         <h2>Journey On with Conviction</h2>
         <ul>
