--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h1>KWIN CITY</h1>
         <p>Redefining the business landscape with Knowledge, Wellbeing and INnovation</p>
     </header>
+    
+    <section>
         <h2>Journey On with Conviction</h2>
         <ul>
             <li>Our new city is designed for ‘that’ tomorrow. KWIN has people at its heart. Here, each doorway opens to new learning opportunities, every pillar supports cutting-edge innovations, and every path charts the course for comprehensive well-being.</li>
