--- a/index.html
+++ b/index.html
@@ -60,5 +60,14 @@
 
         <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller</blockquote>
     </section>
+<h2>Data Structures And Algorithms Studied</h2>
+<h3>Data Structures</h3>
+<li>Trees: n-ary Trees, AVL Trees, Red-Black Trees, Trie, Skip List, Segment Trees, Fenwick Trees
+<li>Graphs: Directed, undirected, weighted graphs, and also adjacency matrix and adjacency list
+<li>Heap (min/max), lookup tables, etc.
+<h3>Algorithms</h3>
+<li>Sorting Algorithms: Bubble Sort, Selection Sort, Insertion Sort, Merge Sort, Quick Sort, and Heap Sort</li>
+<li>String Search Algorithms: Boyer-Moore, Knuth-Morris-Pratt, Rabin-Karp</li>
+<li>Graph Algorithms: BFS, DFS, Krushkal, Dijkstra, Floyd-Warshall, Prim’s, etc.</li>
 </body>
 </html>
