--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     
     <section>
-        <h2>Journey On with Conviction</h2>
+        <h2>Journey On With Conviction</h2>
         <ul>
             <li>Our new city is designed for ‘that’ tomorrow. KWIN has people at its heart. Here, each doorway opens to new learning opportunities, every pillar supports cutting-edge innovations, and every path charts the course for comprehensive well-being.</li>
             <li> Our city, rich in green promises, is for and of the people. Built on a mindful social framework, KWIN instils values of collaboration, conservation and coexistence.</li>
@@ -59,8 +59,8 @@
         </dl>
 
         <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller</blockquote>
-    </section>
-    <header>
+
+         <header>
 <h2>Data Structures And Algorithms Studied</h2>
 <h3>Data Structures</h3>
 <li>Trees: n-ary Trees, AVL Trees, Red-Black Trees, Trie, Skip List, Segment Trees, Fenwick Trees
@@ -71,5 +71,7 @@
 <li>String Search Algorithms: Boyer-Moore, Knuth-Morris-Pratt, Rabin-Karp</li>
 <li>Graph Algorithms: BFS, DFS, Krushkal, Dijkstra, Floyd-Warshall, Prim’s, etc.</li>
     </header>
+    </section>
+   
 </body>
 </html>
