--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <dd>Smart City</dd>
         </dl>
 
-        <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller</blockquote>
+        <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller<br></blockquote>
 
 <h1>
     <dt>Data Structures And Algorithms Studied</dt></h1>
