--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller<br></blockquote>
 
 <h1>
-    <dt>Data Structures And Algorithms Studied</dt></h1>
+    <dt><br><br>Data Structures And Algorithms Studied</dt></h1>
 <h3>Data Structures</h3>
 <li>Trees: n-ary Trees, AVL Trees, Red-Black Trees, Trie, Skip List, Segment Trees, Fenwick Trees
 <li>Graphs: Directed, undirected, weighted graphs, and also adjacency matrix and adjacency list
