--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
         <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller<br></blockquote>
 
-<h1 style="color: orange;">
+<h1 style="color: yellow;">
     <dt><br><br>Data Structures And Algorithms Studied</dt></h1>
-<h3 style="color: orange;">Data Structures</h3>
+<h3 style="color: yellow;">Data Structures</h3>
 <li>Trees: n-ary Trees, AVL Trees, Red-Black Trees, Trie, Skip List, Segment Trees, Fenwick Trees
 <li>Graphs: Directed, undirected, weighted graphs, and also adjacency matrix and adjacency list
 <li>Heap (min/max), lookup tables, etc.
-<h3>Algorithms</h3>
+<h3 style="color: yellow;">Algorithms</h3>
 <li>Sorting Algorithms: Bubble Sort, Selection Sort, Insertion Sort, Merge Sort, Quick Sort, and Heap Sort</li>
 <li>String Search Algorithms: Boyer-Moore, Knuth-Morris-Pratt, Rabin-Karp</li>
 <li>Graph Algorithms: BFS, DFS, Krushkal, Dijkstra, Floyd-Warshall, Prim’s, etc.</li>
