--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
 <li>Sorting Algorithms: Bubble Sort, Selection Sort, Insertion Sort, Merge Sort, Quick Sort, and Heap Sort</li>
 <li>String Search Algorithms: Boyer-Moore, Knuth-Morris-Pratt, Rabin-Karp</li>
 <li>Graph Algorithms: BFS, DFS, Krushkal, Dijkstra, Floyd-Warshall, Prim’s, etc.</li>
+      <h3 style="color: #FFC107;"> Connecting the Course with Real-Time Applications</h3>
+<li>We connect the course with real-time applications by applying the algorithms in the course project of city design.
+<li>By understanding the design principles behind the algorithms, we implement them to solve problems faced in designing a city.
+
+<h3 style="color: #FFC107;">Course Project Introduction</h3>
+<li>Suryakshetra is a well planned urban smart city with area of 1500 sq.km in Gujarat, it is strategically chosen as its proximity to established cities like Rajkot, Porbandar, and Junagadh.</li>
+<li>This city model aspires to balance growth, sustainability, and livability while addressing key challenges of urbanization in India.</li>
+<li>Aligning with the Government of India’s mission to promote sustainable and inclusive cities, Suryakshetra will integrate smart technologies, improve urban infrastructure, and enhance the quality of life.</li>
     </section>
    
 </body>
