--- a/index.html
+++ b/index.html
@@ -9,27 +9,33 @@
 </head>
 <body>
     <header>
-        <h1>KWIN CITY</h1>
-        <p>Redefining the business landscape with Knowledge, Wellbeing and INnovation</p>
+        <div class="header-container">
+            <h1>KWIN CITY</h1>
+            <p>Redefining the business landscape with Knowledge, Wellbeing, and INnovation</p>
+        </div>
     </header>
-    
-    <section>
+
+    <section class="about">
         <h2>Journey On With Conviction</h2>
         <ul>
             <li>Our new city is designed for ‘that’ tomorrow. KWIN has people at its heart. Here, each doorway opens to new learning opportunities, every pillar supports cutting-edge innovations, and every path charts the course for comprehensive well-being.</li>
-            <li> Our city, rich in green promises, is for and of the people. Built on a mindful social framework, KWIN instils values of collaboration, conservation and coexistence.</li>
-            <li>A destination like no other, the city inspires an innovative way of life..</li>
+            <li>Our city, rich in green promises, is for and of the people. Built on a mindful social framework, KWIN instills values of collaboration, conservation, and coexistence.</li>
+            <li>A destination like no other, the city inspires an innovative way of life.</li>
         </ul>
+    </section>
 
+    <section class="location">
         <h2>Strategic Location</h2>
         <ul>
-            <li>It is strategically located between Doddaballapur and Dobbaspet, at 45 minutes from Kempegowda International Airport and is well-connected through the Bangalore-Hubli-Mumbai Express rail route, near National Highways 44 and 648.</li>
+            <li>It is strategically located between Doddaballapur and Dobbaspet, 45 minutes from Kempegowda International Airport, and is well-connected through the Bangalore-Hubli-Mumbai Express rail route, near National Highways 44 and 648.</li>
         </ul>
+    </section>
 
-        <h2> SMART CITY </h2>
+    <section class="smart-city">
+        <h2>Smart City</h2>
         <dl>
             <dt>Course Name</dt>
-            <dd>Design and Analysis of Alogorithms</dd>
+            <dd>Design and Analysis of Algorithms</dd>
 
             <dt>Course Code</dt>
             <dd>24ECAC203</dd>
@@ -37,16 +43,14 @@
             <dt>Task Force</dt>
             <dd>130. Vishal U Hosur</dd>
             <dd>131. Varun S Terdal</dd>
-            <dd>133. Suleman A </dd>
+            <dd>133. Suleman A</dd>
             <dd>158. Saif Ali</dd>
 
-
             <dt>SRN</dt>
-            <dd> 01fe23bci065 </dd>
-            <dd> 01fe23bci068 </dd>
-            <dd> 01fe23bci071 </dd>
-            <dd> 01fe23bci008 </dd>
-
+            <dd>01FE23BCI065</dd>
+            <dd>01FE23BCI068</dd>
+            <dd>01FE23BCI071</dd>
+            <dd>01FE23BCI008</dd>
 
             <dt>Course Instructor</dt>
             <dd>KMMR</dd>
@@ -57,28 +61,37 @@
             <dt>Portfolio Topic/Domain</dt>
             <dd>Smart City</dd>
         </dl>
-
-        <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller<br></blockquote>
-
-<h1 style="color: #FFC107;">
-    <dt><br><br>Data Structures And Algorithms Studied</dt></h1>
-<h3 style="color:  #FFC107;">Data Structures</h3>
-<li>Trees: n-ary Trees, AVL Trees, Red-Black Trees, Trie, Skip List, Segment Trees, Fenwick Trees
-<li>Graphs: Directed, undirected, weighted graphs, and also adjacency matrix and adjacency list
-<li>Heap (min/max), lookup tables, etc.
-<h3 style="color: #FFC107;">Algorithms</h3>
-<li>Sorting Algorithms: Bubble Sort, Selection Sort, Insertion Sort, Merge Sort, Quick Sort, and Heap Sort</li>
-<li>String Search Algorithms: Boyer-Moore, Knuth-Morris-Pratt, Rabin-Karp</li>
-<li>Graph Algorithms: BFS, DFS, Krushkal, Dijkstra, Floyd-Warshall, Prim’s, etc.</li>
-      <h3 style="color: #FFC107;"> Connecting the Course with Real-Time Applications</h3>
-<li>We connect the course with real-time applications by applying the algorithms in the course project of city design.
-<li>By understanding the design principles behind the algorithms, we implement them to solve problems faced in designing a city.
-
-<h3 style="color: #FFC107;">Course Project Introduction</h3>
-<li>Suryakshetra is a well planned urban smart city with area of 1500 sq.km in Gujarat, it is strategically chosen as its proximity to established cities like Rajkot, Porbandar, and Junagadh.</li>
-<li>This city model aspires to balance growth, sustainability, and livability while addressing key challenges of urbanization in India.</li>
-<li>Aligning with the Government of India’s mission to promote sustainable and inclusive cities, Suryakshetra will integrate smart technologies, improve urban infrastructure, and enhance the quality of life.</li>
+        <blockquote>“Alone we can do so little; together we can do so much.” &mdash; Helen Keller</blockquote>
     </section>
-   
+
+    <section class="details">
+        <h2>Data Structures and Algorithms Studied</h2>
+        <h3>Data Structures</h3>
+        <ul>
+            <li>Trees: n-ary Trees, AVL Trees, Red-Black Trees, Trie, Skip List, Segment Trees, Fenwick Trees</li>
+            <li>Graphs: Directed, undirected, weighted graphs, adjacency matrix, and adjacency list</li>
+            <li>Heap (min/max), lookup tables, etc.</li>
+        </ul>
+
+        <h3>Algorithms</h3>
+        <ul>
+            <li>Sorting Algorithms: Bubble Sort, Selection Sort, Insertion Sort, Merge Sort, Quick Sort, and Heap Sort</li>
+            <li>String Search Algorithms: Boyer-Moore, Knuth-Morris-Pratt, Rabin-Karp</li>
+            <li>Graph Algorithms: BFS, DFS, Kruskal’s, Dijkstra’s, Floyd-Warshall, Prim’s, etc.</li>
+        </ul>
+
+        <h3>Connecting the Course with Real-Time Applications</h3>
+        <ul>
+            <li>We connect the course with real-time applications by applying the algorithms in the course project of city design.</li>
+            <li>By understanding the design principles behind the algorithms, we implement them to solve problems faced in designing a city.</li>
+        </ul>
+
+        <h3>Course Project Introduction</h3>
+        <ul>
+            <li>Suryakshetra is a well-planned urban smart city with an area of 1500 sq.km in Gujarat. It is strategically chosen for its proximity to established cities like Rajkot, Porbandar, and Junagadh.</li>
+            <li>This city model aspires to balance growth, sustainability, and livability while addressing key challenges of urbanization in India.</li>
+            <li>Aligning with the Government of India’s mission to promote sustainable and inclusive cities, Suryakshetra will integrate smart technologies, improve urban infrastructure, and enhance the quality of life.</li>
+        </ul>
+    </section>
 </body>
 </html>
