--- a/index.html
+++ b/index.html
@@ -3,36 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Student Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="header-container">
-            <h1>KWIN CITY</h1>
-            <p>Redefining the business landscape with Knowledge, Wellbeing, and INnovation</p>
-        </div>
+        <h1>Welcome to KWIN City</h1>
+        <p>Your gateway to knowledge, innovation, and well-being.</p>
     </header>
 
-    <section class="about">
-        <h2>Journey On With Conviction</h2>
+    <section>
+        <h2>About KWIN City</h2>
+        <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation.</p>
         <ul>
-            <li>Our new city is designed for ‘that’ tomorrow. KWIN has people at its heart. Here, each doorway opens to new learning opportunities, every pillar supports cutting-edge innovations, and every path charts the course for comprehensive well-being.</li>
-            <li>Our city, rich in green promises, is for and of the people. Built on a mindful social framework, KWIN instills values of collaboration, conservation, and coexistence.</li>
-            <li>A destination like no other, the city inspires an innovative way of life.</li>
+            <li>Eco-friendly and people-centric design.</li>
+            <li>Focus on collaboration and coexistence.</li>
+            <li>Empowering residents through technology and innovation.</li>
         </ul>
     </section>
 
-    <section class="location">
+    <section>
         <h2>Strategic Location</h2>
+        <p>KWIN City is conveniently located:</p>
         <ul>
-            <li>It is strategically located between Doddaballapur and Dobbaspet, 45 minutes from Kempegowda International Airport, and is well-connected through the Bangalore-Hubli-Mumbai Express rail route, near National Highways 44 and 648.</li>
+            <li>45 minutes from Kempegowda International Airport.</li>
+            <li>Connected via major highways and rail routes.</li>
         </ul>
     </section>
 
-    <section class="smart-city">
-        <h2>Smart City</h2>
+    <section>
+        <h2>Course Highlights</h2>
         <dl>
             <dt>Course Name</dt>
             <dd>Design and Analysis of Algorithms</dd>
@@ -40,58 +41,32 @@
             <dt>Course Code</dt>
             <dd>24ECAC203</dd>
 
-            <dt>Task Force</dt>
-            <dd>130. Vishal U Hosur</dd>
-            <dd>131. Varun S Terdal</dd>
-            <dd>133. Suleman A</dd>
-            <dd>158. Saif Ali</dd>
-
-            <dt>SRN</dt>
-            <dd>01FE23BCI065</dd>
-            <dd>01FE23BCI068</dd>
-            <dd>01FE23BCI071</dd>
-            <dd>01FE23BCI008</dd>
-
-            <dt>Course Instructor</dt>
+            <dt>Instructor</dt>
             <dd>KMMR</dd>
 
             <dt>University</dt>
             <dd>KLE Technological University</dd>
-
-            <dt>Portfolio Topic/Domain</dt>
-            <dd>Smart City</dd>
         </dl>
-        <blockquote>“Alone we can do so little; together we can do so much.” &mdash; Helen Keller</blockquote>
     </section>
 
-    <section class="details">
-        <h2>Data Structures and Algorithms Studied</h2>
-        <h3>Data Structures</h3>
+    <section>
+        <h2>Team Members</h2>
         <ul>
-            <li>Trees: n-ary Trees, AVL Trees, Red-Black Trees, Trie, Skip List, Segment Trees, Fenwick Trees</li>
-            <li>Graphs: Directed, undirected, weighted graphs, adjacency matrix, and adjacency list</li>
-            <li>Heap (min/max), lookup tables, etc.</li>
-        </ul>
-
-        <h3>Algorithms</h3>
-        <ul>
-            <li>Sorting Algorithms: Bubble Sort, Selection Sort, Insertion Sort, Merge Sort, Quick Sort, and Heap Sort</li>
-            <li>String Search Algorithms: Boyer-Moore, Knuth-Morris-Pratt, Rabin-Karp</li>
-            <li>Graph Algorithms: BFS, DFS, Kruskal’s, Dijkstra’s, Floyd-Warshall, Prim’s, etc.</li>
-        </ul>
-
-        <h3>Connecting the Course with Real-Time Applications</h3>
-        <ul>
-            <li>We connect the course with real-time applications by applying the algorithms in the course project of city design.</li>
-            <li>By understanding the design principles behind the algorithms, we implement them to solve problems faced in designing a city.</li>
-        </ul>
-
-        <h3>Course Project Introduction</h3>
-        <ul>
-            <li>Suryakshetra is a well-planned urban smart city with an area of 1500 sq.km in Gujarat. It is strategically chosen for its proximity to established cities like Rajkot, Porbandar, and Junagadh.</li>
-            <li>This city model aspires to balance growth, sustainability, and livability while addressing key challenges of urbanization in India.</li>
-            <li>Aligning with the Government of India’s mission to promote sustainable and inclusive cities, Suryakshetra will integrate smart technologies, improve urban infrastructure, and enhance the quality of life.</li>
+            <li>Vishal U Hosur</li>
+            <li>Varun S Terdal</li>
+            <li>Suleman A</li>
+            <li>Saif Ali</li>
         </ul>
     </section>
+
+    <section>
+        <h2>Smart City Project</h2>
+        <p>Suryakshetra: A well-planned urban smart city in Gujarat that balances growth, sustainability, and livability.</p>
+        <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller</blockquote>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 KWIN City | Designed by Students of KLE Technological University</p>
+    </footer>
 </body>
 </html>
