--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <h1>Welcome to KWIN City</h1>
         <p>Your gateway to knowledge, innovation, and well-being.</p>
     </header>
+    <section id="city-map">
+    <h2>City Map</h2>
+    <p>Explore the districts of KWIN City, designed for knowledge, innovation, and growth.</p>
+    <div class="map-container">
+        <img src="C:\Users\varun\OneDrive\图片\Screenshots\Screenshot 2024-12-26 114240.png" alt="KWIN City Map">
+    </div>
+</section>
 
     <section>
         <h2>About KWIN City</h2>
