--- a/index.html
+++ b/index.html
@@ -3,6 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to KWIN City</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <h1>Welcome to KWIN City</h1>
+        <p>Your gateway to knowledge, innovation, and well-being.</p>
+    </header>
+    <section>
+        <h2>Student Portfolio</h2>
+        <p>Explore our student portfolio and get to know about KWIN City and the Smart City project.</p>
+        <a href="portfolio.html" class="button">View Portfolio</a>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 KWIN City | Designed by Students of KLE Technological University</p>
+    </footer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -12,13 +37,19 @@
         <h1>Welcome to KWIN City</h1>
         <p>Your gateway to knowledge, innovation, and well-being.</p>
     </header>
+
+    <!-- Navigation Link to Homepage -->
+    <section>
+        <a href="index.html" class="button">Back to Homepage</a>
+    </section>
+
     <section id="city-map">
-    <h2>City Map</h2>
-    <p>Explore the districts of KWIN City, designed for knowledge, innovation, and growth.</p>
-    <div class="map-container">
-        <img src="C:\Users\varun\OneDrive\图片\Screenshots\Screenshot 2024-12-26 114240.png" alt="KWIN City Map">
-    </div>
-</section>
+        <h2>City Map</h2>
+        <p>Explore the districts of KWIN City, designed for knowledge, innovation, and growth.</p>
+        <div class="map-container">
+            <img src="C:\Users\varun\OneDrive\图片\Screenshots\Screenshot 2024-12-26 114240.png" alt="KWIN City Map">
+        </div>
+    </section>
 
     <section>
         <h2>About KWIN City</h2>
