--- a/index.html
+++ b/index.html
@@ -3,20 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to KWIN City</title>
+    <title>KWIN City - Home</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Welcome to KWIN City</h1>
+        <h1>KWIN City</h1>
         <p>Your gateway to knowledge, innovation, and well-being.</p>
     </header>
-    <section>
-        <h2>Student Portfolio</h2>
-        <p>Explore our student portfolio and get to know about KWIN City and the Smart City project.</p>
-        <a href="portfolio.html" class="button">View Portfolio</a>
+
+    <section id="city-map">
+        <h2>City Map</h2>
+        <div class="map-container">
+            <img src="C:\Users\varun\OneDrive\图片\Screenshots\Screenshot 2024-12-26 114240.png" alt="KWIN City Map">
+        </div>
     </section>
+
+    <section id="course-highlights">
+        <h2>Course Highlights</h2>
+        <dl>
+            <dt>Course Name:</dt>
+            <dd>Design and Analysis of Algorithms</dd>
+            <dt>Course Code:</dt>
+            <dd>24ECAC203</dd>
+            <dt>Instructor:</dt>
+            <dd>KMMR</dd>
+            <dt>University:</dt>
+            <dd>KLE Technological University</dd>
+        </dl>
+    </section>
+
+    <section id="team-members">
+        <h2>Team Members</h2>
+        <ul>
+            <li>Vishal U Hosur</li>
+            <li>Varun S Terdal</li>
+            <li>Suleman A</li>
+            <li>Saif Ali</li>
+        </ul>
+    </section>
+
+    <section id="smart-city">
+        <h2>Smart City Project</h2>
+        <p>Suryakshetra: A well-planned urban smart city in Gujarat that balances growth, sustainability, and livability.</p>
+        <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller</blockquote>
+    </section>
+
+    <div class="description-button">
+        <a href="complete_description.html" class="button">Complete Description</a>
+    </div>
 
     <footer>
         <p>&copy; 2024 KWIN City | Designed by Students of KLE Technological University</p>
@@ -28,28 +64,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Portfolio</title>
+    <title>Complete Description</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Welcome to KWIN City</h1>
+        <h1>About KWIN City</h1>
         <p>Your gateway to knowledge, innovation, and well-being.</p>
     </header>
-
-    <!-- Navigation Link to Homepage -->
-    <section>
-        <a href="index.html" class="button">Back to Homepage</a>
-    </section>
-
-    <section id="city-map">
-        <h2>City Map</h2>
-        <p>Explore the districts of KWIN City, designed for knowledge, innovation, and growth.</p>
-        <div class="map-container">
-            <img src="C:\Users\varun\OneDrive\图片\Screenshots\Screenshot 2024-12-26 114240.png" alt="KWIN City Map">
-        </div>
-    </section>
 
     <section>
         <h2>About KWIN City</h2>
@@ -68,39 +91,6 @@
             <li>45 minutes from Kempegowda International Airport.</li>
             <li>Connected via major highways and rail routes.</li>
         </ul>
-    </section>
-
-    <section>
-        <h2>Course Highlights</h2>
-        <dl>
-            <dt>Course Name</dt>
-            <dd>Design and Analysis of Algorithms</dd>
-
-            <dt>Course Code</dt>
-            <dd>24ECAC203</dd>
-
-            <dt>Instructor</dt>
-            <dd>KMMR</dd>
-
-            <dt>University</dt>
-            <dd>KLE Technological University</dd>
-        </dl>
-    </section>
-
-    <section>
-        <h2>Team Members</h2>
-        <ul>
-            <li>Vishal U Hosur</li>
-            <li>Varun S Terdal</li>
-            <li>Suleman A</li>
-            <li>Saif Ali</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Smart City Project</h2>
-        <p>Suryakshetra: A well-planned urban smart city in Gujarat that balances growth, sustainability, and livability.</p>
-        <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller</blockquote>
     </section>
 
     <footer>
